adjusted hoverable parts and media queries

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="svg-container  mobile-visible">
         <img class="h-100" src="img/mobile-logo.png" alt="mobile-logo" />
       </div>
-
-      <input class="form-control mx-5 my-3" type="search" placeholder="Search" aria-label="Search" />
+      <input class="form-control mx-5 my-3 bg-secondary-subtle" type="search"
+        placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search" />
 
       <div class="mobile-hidden">
         <i class="fa-solid fa-list-ul"></i>
@@ -52,21 +52,21 @@
     <main class="debug d-flex">
       <div id="sidebar" class="debug d-flex flex-column justify-content-between align-items-center">
         <ul id="top-side">
-          <li class="d-flex flex-row py-3 align-items-center">
+          <li class="d-flex flex-row py-3 align-items-center px-2">
             <i class="fa-solid fa-house" style="color: #ffffff"></i>
             <div class="mobile-hidden text-light">&nbsp;Home</div>
           </li>
-          <li class="d-flex flex-row py-3 align-items-center">
+          <li class="d-flex flex-row py-3 align-items-center px-2">
             <i class="fa-solid fa-chart-simple" style="color: #ffffff"></i>
             <div class="mobile-hidden text-light">&nbsp;Stats</div>
           </li>
-          <li class="d-flex flex-row py-3 align-items-center">
+          <li class="d-flex flex-row py-3 align-items-center px-2">
             <i class="fa-solid fa-signal" style="color: #ffffff"></i>
             <div class="mobile-hidden text-light">&nbsp;Signals</div>
           </li>
         </ul>
 
-        <div id="bottom-side" class="d-flex flex-row py-3 align-items-center">
+        <div id="bottom-side" class="d-flex flex-row py-3 align-items-center px-2">
           <i class="fa-solid fa-cog" style="color: #ffffff"></i>
           <div class="mobile-hidden text-light">&nbsp;Admin</div>
         </div>
@@ -74,40 +74,15 @@
 
       <div id="main-content" class="debug">
         <section id="main-nav" class="bg-primary container-fluid text-light">
-          <div class="row flex-lg-row p-2">
-            <div class="col-4">
-              <div class="big-title-top d-flex flex-row align-items-center">
-                <h2>Boolean</h2>
-                <span class="badge btn-dark-blue">Piano blaze</span>
-              </div>
-              <div class="big-title-bot d-flex flex-row align-items-center gap-1 flex-nowrap">
-                <span class="badge btn-dark-blue">3 app</span>
-                <span class="text-light">>></span>
-                <div class="d-md-block d-lg-none ">
-                  <i id="plus-options" class="fa-solid fa-plus btn-dark-blue"></i>
-                </div>
-                <div class="d-none d-lg-flex gap-1 flex-nowrap">
-                  <div class="badge btn-dark-blue">Boolean mobile app</div>
-                  <div class="badge btn-dark-blue">Boolean web app</div>
-                  <div class="badge btn-dark-blue">Boolean blog app</div>
-                </div>
-              </div>
-            </div>
-            <div class="col-4">
-              <div id="col-top-center">
-                Studenti online negli ultimi 30 minuti
-              </div>
-              <h3>
-                125
-              </h3>
-            </div>
-            <div class="col-4 d-flex justify-content-end">
+          <div class="row flex-md-row flex-column p-2">
+            <!-- plus -->
+            <div class="col-12 col-md-4 d-flex justify-content-start order-md-3">
 
-              <button class="btn btn-primary d-flex flex-row align-center" type="button" data-bs-toggle="offcanvas"
+              <button class="btn btn-primary d-flex flex-row align-center px-0" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                <div class="align-self-center me-3">Nuovo Studente</div>
-                <div class="border py-2 rounded ">
-                  <i class="fa-solid fa-plus" style="color: #ffffff;"></i>
+                <div class=" me-3 h-100 justify-content-start">Nuovo Studente</div>
+                <div id="offcanvasBtn" class="border py-2 rounded ">
+                  <i class="fa-solid fa-plus "></i>
                 </div>
               </button>
 
@@ -140,7 +115,7 @@
                       </div>
 
                       <div class="row mb-3">
-                        <div class="col-6">
+                        <div class="col-sm-12 col-md-6">
                           <label for="username">Email</label>
                           <div class="input-group">
                             <div class="input-group-prepend">
@@ -152,35 +127,12 @@
                             </div>
                           </div>
                         </div>
-                        <div class="mb-3 col-6">
+                        <div class="mb-3 col-sm-12 col-md-6">
                           <label for="password">Password <span class="text-muted"></span></label>
                           <input type="password" class="form-control" id="email">
                         </div>
                       </div>
 
-                      <!-- eamil-2 -->
-
-                      <div class="row mb-3">
-                        <div class="col-6">
-                          <label for="username">Indirizzo Email</label>
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <span class="input-group-text">@</span>
-                            </div>
-                            <input type="text" class="form-control" id="username" required="@">
-                            <div class="invalid-feedback" style="width: 100%;">
-                              Your username is required.
-                            </div>
-                          </div>
-                        </div>
-                        <div class="mb-3 col-6">
-                          <label for="password">Password <span class="text-muted"></span></label>
-                          <input type="password" class="form-control" id="email">
-                          <div class="invalid-feedback">
-                            inserire il proprio indirizzo
-                          </div>
-                        </div>
-                      </div>
 
                       <!-- indirizzo -->
 
@@ -195,7 +147,7 @@
 
 
                       <div class="row">
-                        <div class="col-6 mb-3">
+                        <div class="col-sm-12 col-md-6 mb-3">
                           <label for="address2">Città</label>
                           <input type="text" class="form-control" id="address2">
                         </div>
@@ -210,7 +162,7 @@
                           </select>
                         </div>
 
-                        <div class="col-2 ">
+                        <div class="col-sm-12 col-md-2 ">
                           <label for="zip">CAP</label>
                           <input type="text" class="form-control" id="zip" placeholder="" required="">
                           <div class="invalid-feedback">
@@ -250,83 +202,37 @@
                   </div>
                 </div>
               </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
+            <!-- boolean -->
+            <div class="col-12 col-md-4 mb-3 order-md-1">
+              <div class="big-title-top d-flex flex-row align-items-center">
+                <h2>Boolean</h2>
+                <span class="badge btn-dark-blue">Piano blaze</span>
+              </div>
+              <div class="big-title-bot d-flex flex-row align-items-center gap-1 flex-nowrap">
+                <span class="badge btn-dark-blue">3 app</span>
+                <span class="text-light">>></span>
+                <div class="d-md-block d-lg-none ">
+                  <i id="plus-options" class="fa-solid fa-plus btn-dark-blue"></i>
+                </div>
+                <div class="d-none d-lg-flex gap-1 flex-nowrap">
+                  <div class="badge btn-dark-blue">Boolean mobile app</div>
+                  <div class="badge btn-dark-blue">Boolean web app</div>
+                  <div class="badge btn-dark-blue">Boolean blog app</div>
+                </div>
+              </div>
+            </div>
+            <!-- studenti-online -->
+            <div class="col-12 col-md-4 order-md-2">
+              <div id="col-top-center text-nowrap">
+                Studenti online negli ultimi 30 minuti
+              </div>
+              <h3>
+                125
+              </h3>
+            </div>
+
+
           </div>
         </section>
         <div class="container-fluid">
@@ -399,7 +305,7 @@
                         </td>
                         <td>
                           <div class="btn-group me-2" role="group">
-                            <div class="table-data py-2"><span class="badge bg-success">Done</span></div>
+                            <div class="table-data py-2"><span class="badge bg-warning">process</span></div>
                           </div>
                         </td>
                         <td class="h-100 me-2">
@@ -429,7 +335,7 @@
                         </td>
                         <td>
                           <div class="btn-group me-2" role="group">
-                            <div class="table-data py-2"><span class="badge bg-success">Done</span></div>
+                            <div class="table-data py-2"><span class="badge bg-danger">failed</span></div>
                           </div>
                         </td>
                         <td class="h-100 me-2">
@@ -530,30 +436,27 @@
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, minima nulla consectetur
-                    dignissimos modi quaerat aspernatur iusto praesentium ex mollitia.
+                    Clicca sul + in alto nella sezione blu.
                   </div>
                 </div>
 
                 <div class="accordion-container">
                   <div class="accordion d-flex flex-row justify-content-between align-content-center mx-3 my-3">
-                    <div class="fw-medium">Come aggiungere un nuovo studente?</div>
+                    <div class="fw-medium">Come posso accedere alle informazioni dul mio account?</div>
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, minima nulla consectetur
-                    dignissimos modi quaerat aspernatur iusto praesentium ex mollitia.
+                    licca sull'icona della campanella
                   </div>
                 </div>
 
                 <div class="accordion-container">
                   <div class="accordion d-flex flex-row justify-content-between align-content-center mx-3 my-3">
-                    <div class="fw-medium">Come aggiungere un nuovo studente?</div>
+                    <div class="fw-medium">Posso usare questa dashboard da mobile?</div>
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, minima nulla consectetur
-                    dignissimos modi quaerat aspernatur iusto praesentium ex mollitia.
+                    Si, certo
                   </div>
                 </div>
               </div>
