adjusted searchbar lens, removed some unused css classes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
       <div class="svg-container  mobile-visible">
         <img class="h-100" src="img/mobile-logo.png" alt="mobile-logo" />
       </div>
-      <input class="form-control mx-5 my-3 bg-secondary-subtle" type="search"
-        placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search" />
+      <div class="mx-5 my-3 searchbar-container position-relative w-100">
+        <i class="fa-solid fa-magnifying-glass position-absolute " style="top: 20%; left: 15px;"></i>
+        <input class="form-control  bg-secondary-subtle px-5" type="search"
+          placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search" />
+      </div>
 
       <div class="mobile-hidden">
         <i class="fa-solid fa-list-ul"></i>
@@ -274,7 +277,7 @@
                         </td>
                         <td>
                           <div class="btn-group me-2" role="group">
-                            <div class="table-data py-2"><span class="badge bg-success">Done</span></div>
+                            <div class="table-data py-2"><span class="badge bg-success">done</span></div>
                           </div>
                         </td>
                         <td class="h-100 me-2">
@@ -365,7 +368,7 @@
                         </td>
                         <td>
                           <div class="btn-group me-2" role="group">
-                            <div class="table-data py-2"><span class="badge bg-success">Done</span></div>
+                            <div class="table-data py-2"><span class="badge bg-success">done</span></div>
                           </div>
                         </td>
                         <td class="h-100 me-2">
@@ -396,7 +399,7 @@
                         </td>
                         <td>
                           <div class="btn-group me-2" role="group">
-                            <div class="table-data py-2"><span class="badge bg-success">Done</span></div>
+                            <div class="table-data py-2"><span class="badge bg-success">done</span></div>
                           </div>
                         </td>
                         <td class="h-100 me-2">
@@ -425,28 +428,17 @@
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, minima nulla consectetur
-                    dignissimos modi quaerat aspernatur iusto praesentium ex mollitia.
-                  </div>
-                </div>
-
-                <div class="accordion-container">
-                  <div class="accordion d-flex flex-row justify-content-between align-content-center mx-3 my-3">
-                    <div class="fw-medium">Come aggiungere un nuovo studente?</div>
-                    <div><i class="fa-solid fa-angle-down"></i></div>
-                  </div>
-                  <div class="accordion-expand px-4 py-2">
                     Clicca sul + in alto nella sezione blu.
                   </div>
                 </div>
 
                 <div class="accordion-container">
                   <div class="accordion d-flex flex-row justify-content-between align-content-center mx-3 my-3">
-                    <div class="fw-medium">Come posso accedere alle informazioni dul mio account?</div>
+                    <div class="fw-medium">Come posso accedere alle informazioni sul mio account?</div>
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    licca sull'icona della campanella
+                    Clicca sull'icona della campanella.
                   </div>
                 </div>
 
@@ -456,7 +448,7 @@
                     <div><i class="fa-solid fa-angle-down"></i></div>
                   </div>
                   <div class="accordion-expand px-4 py-2">
-                    Si, certo
+                    Si, certo.
                   </div>
                 </div>
               </div>
